--- a/week1/index.html
+++ b/week1/index.html
@@ -2,7 +2,6 @@
 <html>
     <head>
         <title>Aris' Portfolio</title>
-        <!-- hint: remember to change your page title! -->
         <meta charset="utf-8" />
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="styles/style.css">
@@ -29,11 +28,11 @@
             <h2>About Me!</h2>
             <p> I am a 1st year transfer from the Bay Area. I am a Psychology major with a digital humanities minor. 
                 I love thrifting, eating new foods, and playing basketball. I'm deeply interested in technology and business, and I also hope to divert more time into my clothing brand. 
-                During my freetime, I enjoy playing video games with friends and taking photos on my film camera. </p>
+                During my freetime, I enjoy playing video games with friends and taking photos on my film camera.</p>
            
             <h2>My Goals as a Digital Map Maker</h2>
             <p>Being my first introductory class to coding and the world of GIS, I hope to become more comfortable as the quarter progresses. 
-               I find power and information to be a powerful tool coinciding with GIS and mapmaking.
+               I find power and information to be a powerful tool coinciding with GIS and mapmaking.</p>
             
             <h2>My Interests</h2>
             <ul>
